[package]
name = "alibaba_cloud_kms_agent"
version = "1.0.1"
edition = "2021"
license = "Apache-2.0"
description = "The Alibaba Cloud KMS Agent is a local HTTP service that you can install and use in your compute environments to read secrets from Secrets Manager and cache them in memory."
homepage = "https://github.com/jht5945/alibaba-cloud-kms-agent"
repository = "https://github.com/jht5945/alibaba-cloud-kms-agent"
readme = "../README.md"

[dependencies]
hyper = { version = "1.5", features = ["http1", "server"] }
tokio = { version = "1.41", features = ["rt-multi-thread", "net", "macros"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio"]}
bytes = "1.8"

#pretty_env_logger = "0.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
config = "0.14"

log = "0.4"
log4rs = { version = "1.3", features = ["gzip"] }
url = "2.5"
alibaba-cloud-kms = { version = "0.1", git = "https://github.com/jht5945/alibaba-cloud-kms.git" }
alibaba_cloud_kms_caching = { version = "1.0", path = "../alibaba_cloud_kms_caching" }

# For unit tests
[dev-dependencies]
hyper = { version = "1.5", features = ["http1", "server", "client"]}
tokio = {version = "1.41", features = ["test-util", "rt-multi-thread", "net", "macros"] }
