[package]
name = "alibaba_cloud_kms_caching"
version = "1.0.1"
edition = "2021"
license = "Apache-2.0"
description = "The Alibaba Cloud KMS Rust caching client enables in-process caching of secrets for Rust applications."
homepage = "https://github.com/jht5945/alibaba-cloud-kms-agent/alibaba_cloud_kms_caching"
repository = "https://github.com/jht5945/alibaba-cloud-kms-agent"
readme = "README.md"

[dependencies]
aws-sdk-secretsmanager = "1"
aws-smithy-runtime-api = "1"
aws-smithy-types = "1"
serde_with = "3"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["rt", "sync"] }
linked-hash-map = "0.5.6"
aws-config = "1"

[dev-dependencies]
aws-sdk-secretsmanager = { version = "1", features = ["test-util"] }
tokio = { version = "1", features = ["macros", "rt", "sync", "test-util"] }
tokio-test = "0.4.4"
