[package]
name = "alibaba_cloud_kms_caching"
version = "1.0.1"
edition = "2021"
license = "Apache-2.0"
description = "The Alibaba Cloud KMS Rust caching client enables in-process caching of secrets for Rust applications."
homepage = "https://github.com/jht5945/alibaba-cloud-kms-agent/alibaba_cloud_kms_caching"
repository = "https://github.com/jht5945/alibaba-cloud-kms-agent"
readme = "README.md"

[dependencies]
log = "0.4"
serde_with = "3.11"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.42", features = ["rt", "sync"] }
linked-hash-map = "0.5"
alibaba-cloud-kms = { version = "0.1", git = "https://github.com/jht5945/alibaba-cloud-kms.git" }
iso8601-timestamp = "0.3"

[dev-dependencies]
tokio = { version = "1.42", features = ["macros", "rt", "sync", "test-util"] }
